--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+node_modules
 
 # Created by https://www.toptal.com/developers/gitignore/api/vscode
 # Edit at https://www.toptal.com/developers/gitignore?templates=vscode
